# ecr-financy-back

./: .dockerignore  .env-example  .gitignore  Dockerfile  Extrato Conta Corrente-070320260154.ofx  README.md  STUDY.md  alembic.ini  debug_incomes.py  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  test_masking.py
.github/workflows/: ci.yaml  deploy.yml  main.yaml  staging.yaml
.qwen/: settings.json  settings.json.orig
alembic/: env.py  script.py.mako
alembic/versions/: 052a9807d734_create_credit_card_transactions_table.py  07a21826f270_add_ofx_transactions_table.py  084bd92b3d11_init.py  11b6ebb64bea_reconciliation_2.py  202603150001_add_active_to_ofx_transaction.py  202604280001_add_category_id_to_accounts.py  202604300001_add_expense_installments.py  202604300002_add_income_installments.py  202604300003_add_credit_card_transaction_installments.py  2ab4ae9d61ad_add_contact_id_to_accounts.py  44d07754cb78_create_reconciliations_table.py  55eb34dae55c_transfer_id.py  59a75830aba8_add_closing_and_due_day_to_accounts.py  7be519642bb1_init.py  7e1fa6636c7a_init.py  8065fbcf86f4_init.py  8ce620753cc2_add_invoice_id_to_expenses.py  9ec783343164_init.py  af07ab63cb02_invoices.py  bd629b9cb42b_init.py  c0b3ebf4ea7b_remove_original_amount_and_recurrence_.py  ceea5432a94f_change_account_column_to_uuid.py  d1669212865f_make_fields_mandatory.py  e3cdcde546b4_add_payment_fields_to_credit_card_.py  ff50dc2fd63a_create_credit_card_invoices_table.py
app/: dependencies.py  main.py
app/core/: config.py  security.py
app/db/: base.py  cassandra.py  postgres.py
app/models/: __init__.py  accounts.py  categories.py  contacts.py  cost_centers.py  credit_card_invoices.py  credit_card_transactions.py  dashboard.py  expenses.py  financial_forecast.py  incomes.py  ofx_transaction.py  reconciliation.py  reporting.py  reports.py  subcategories.py  transactions.py
app/repositories/: accounts.py  categories.py  contacts.py  cost_centers.py  credit_card_invoices.py  credit_card_transactions.py  dashboard.py  expenses.py  financial_forecast.py  incomes.py  ofx_transaction_repository.py  reports.py  reports_accounts.py  reports_incomes.py  subcategories.py  transactions.py
app/routers/: accounts.py  bank_statement.py  categories.py  contacts.py  cost_centers.py  credit_card_invoices.py  credit_card_transactions.py  dashboard.py  expenses.py  financial_forecast.py  health.py  incomes.py  reports.py  reports_accounts.py  reports_incomes.py  subcategories.py  transactions.py
app/schemas/: accounts.py  bank_statement.py  categories.py  contacts.py  cost_centers.py  credit_card_invoices.py  credit_card_transactions.py  dashboard.py  expenses.py  financial_forecast.py  incomes.py  reconciliation.py  subcategories.py  transfers.py
app/scripts/: fix_account_uuids.py  migrate_legacy_db.py  migrate_tenant_credit_card_invoices_payment_fields.py  migrate_tenants.py  seed_basics.py  sync_invoices_to_expenses.py
app/services/: ofx_service.py
scripts/: migrate_public_to_tenant.py  migrate_tenants.py
study/: cadastros-resumo.html  flow-01-tenant.html  flow-02-contacts.html  flow-03-accounts.html  flow-04-income-create.html  flow-05-expense-create.html  flow-06-credit-card.html  flow-07-transfers.html  flow-08-financial-forecast.html  index.html
study/assets/: study.css  study.js
tests/: conftest.py  repro_issue.py
tests/integration/: test_accounts.py  test_bank_statement.py  test_bank_statement_balance.py  test_bank_statement_error.py  test_bank_statement_extended.py  test_bank_statement_params.py  test_categories_subcategories.py  test_credit_card_transaction_invoice_logic.py  test_credit_card_transactions.py  test_credit_card_transactions_bug.py  test_crud_modules.py  test_dashboard.py  test_expenses.py  test_financial_forecast.py  test_invoice_expense_sync.py  test_invoices.py  test_misc_modules.py  test_reconciliation.py  test_reports.py  test_reports_incomes.py  test_transactions.py  test_transfers.py
(+14 files in other folders)
