[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecr-financy-back"
version = "0.1.0"
description = "Backend FastAPI para Controle Financeiro"
authors = [{name = "Egor Rodrigues", email = "me@egor.soy"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.5",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.36",
    "psycopg>=3.2.3",
    "alembic>=1.13.2",
    "pyjwt>=2.10.1",
    "ofxparse>=0.21",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "mypy>=1.19.0",
    "taskipy>=1.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "A", "C4", "UP"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "cassandra.*"
ignore_missing_imports = true

[tool.taskipy.tasks]
lint = 'ruff check .'
lint-fix = 'ruff check . --fix'
format = 'ruff format .'
post_format = 'task lint-fix'
run = 'uvicorn app.main:app --reload --host 0.0.0.0 --port 8000'
runserver = 'fastapi dev app/main.py'
test = 'pytest -q'
test-all = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
clean = 'rm -rf htmlcov .coverage database.db .*_cache && find . -type d -name "__pycache__" -exec rm -rf {} +; true'
makemigrations = 'alembic revision --autogenerate -m'
migrate = 'alembic upgrade head'
sync-cc = 'python -m app.scripts.sync_invoices_to_expenses'
migrate-tenant-invoices-payment-fields = 'python -m app.scripts.migrate_tenant_credit_card_invoices_payment_fields'
